--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
         <div class="logo-container"><img src="img/LOGO SHN REVISI 2019.png" alt="Logo SHN FH UI 2019" width="100%"></div>
     </div>
 
+    <footer class="foot">
+        <div class="contact">
+            <h4>Contact Us!</h4>
+            <li>
+                <ul><i class="far fa-user"></i> Muhammad Azis Husein</ul>
+                <ul><i class="far fa-envelope"></i> muhammad.azis81@ui.ac.id</ul>
+                <ul><i class="fas fa-phone"></i> 0878xxxxxx</ul>
+            </li>
+        </div>
+        <h6>Copyright &copy; Faculty of Law University of Indonesia</h6>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
