add sticky navbar

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
       href="https://fonts.googleapis.com/css?family=Karla&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>SHN2019</title>
   </head>
 
   <body>
+    <header id="header">
+      <div class="image-wrapper">
+        <img src="./asset/LOGO SHN REVISI 2019.png" alt="wrecked home" />
+      </div>
+    </header>
+
     <nav id="navbar">
       <div class="container">
         <ul class="navbar-items">
@@ -27,10 +33,10 @@
       </div>
     </nav>
 
-    <header id="header">
-      <div class="image-wrapper">
-        <img src="./asset/LOGO SHN REVISI 2019.png" alt="wrecked home" />
-      </div>
-    </header>
+    <section class="tentang-kami">
+      <div class="container"></div>
+    </section>
+
+    <script src="./js/index.js"></script>
   </body>
 </html>
