add animation on scroll for navbar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav id="navbar">
       <div class="container">
-        <ul class="navbar-items">
+        <ul class="navbar-items before-sticky">
           <li><a href="#">Simposium Hukum Nasional 2019</a></li>
           <ul class="navbar-links">
             <li><a href="#">Tentang Kami</a></li>
