--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
   </head>
 
   <body>
+    <nav id="navbar">
+      <div class="container">
+        <ul class="navbar-items before-sticky">
+          <!-- <li><a href="#" id="logo-word">Simposium Hukum Nasional 2019</a></li> -->
+          <ul class="navbar-links">
+            <li><a href="#">Tentang</a></li>
+            <li><a href="#">Registrasi</a></li>
+            <li><a href="#">Testimonial</a></li>
+          </ul>
+        </ul>
+      </div>
+    </nav>
     <header id="header">
       <div class="image-wrapper">
         <img src="./asset/LOGO SHN REVISI 2019.png" alt="wrecked home" />
       </div>
     </header>
-
+    <!-- 
     <nav id="navbar">
       <div class="container">
         <ul class="navbar-items before-sticky">
@@ -31,7 +43,7 @@
           </ul>
         </ul>
       </div>
-    </nav>
+    </nav> -->
 
     <section class="tentang-kami">
       <div class="container"></div>
