Fixing error.html
Udah pas di Iphone 5

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           praesentium eligendi natus soluta dignissimos quis saepe! Aspernatur
           consectetur qui eos.
         </p>
-        <a href="link gforms" target="_blank" class="btn-light">Daftar</a>
+        <a href="error.html" target="_blank" class="btn-light">Daftar</a>
       </div>
     </section>
 
@@ -157,13 +157,13 @@
           maxime non minima quam suscipit corrupti.
         </p>
         <div class="downloads-content">
-          <a href="link gforms" target="_blank" class="btn-dark"
+          <a href="error.html" target="_blank" class="btn-dark"
             >Download Kajian</a
           >
-          <a href="link gforms" target="_blank" class="btn-dark"
+          <a href="error.html" target="_blank" class="btn-dark"
             >Download Proposal Sponsor</a
           >
-          <a href="link gforms" target="_blank" class="btn-dark"
+          <a href="error.html" target="_blank" class="btn-dark"
             >Download Proposal Dana</a
           >
         </div>
