--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     <div class="modal">
       <nav id="mobile-nav">
         <ul>
-          <li><a href="#header">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#registration">Registration</a></li>
-          <li><a href="#downloads">Downloads</a></li>
+          <li><a href="#header" class="smooth-scroll">Home</a></li>
+          <li><a href="#about" class="smooth-scroll">About</a></li>
+          <li>
+            <a href="#registration" class="smooth-scroll">Registration</a>
+          </li>
+          <li><a href="#downloads" class="smooth-scroll">Downloads</a></li>
         </ul>
       </nav>
     </div>
@@ -39,10 +41,12 @@
         <ul class="navbar-items">
           <!-- <li><a href="#">Simposium Hukum Nasional 2019</a></li> -->
           <ul class="navbar-links">
-            <li><a href="#header">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#registration">Registration</a></li>
-            <li><a href="#downloads">Downloads</a></li>
+            <li><a href="#header" class="smooth-scroll">Home</a></li>
+            <li><a href="#about" class="smooth-scroll">About</a></li>
+            <li>
+              <a href="#registration" class="smooth-scroll">Registration</a>
+            </li>
+            <li><a href="#downloads" class="smooth-scroll">Downloads</a></li>
           </ul>
         </ul>
       </div>
@@ -59,17 +63,21 @@
         <div class="container">
           <ul class="navbar-items">
             <li>
-              <img
-                src="./asset/LOGO SHN REVISI 2019.png"
-                alt=""
-                class="small-logo"
-              />
+              <a href="#header" class="smooth-scroll">
+                <img
+                  src="./asset/LOGO SHN REVISI 2019.png"
+                  alt=""
+                  class="small-logo"
+                />
+              </a>
             </li>
             <ul class="navbar-links">
-              <li><a href="#header">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#registration">Registration</a></li>
-              <li><a href="#downloads">Downloads</a></li>
+              <li><a href="#header" class="smooth-scroll">Home</a></li>
+              <li><a href="#about" class="smooth-scroll">About</a></li>
+              <li>
+                <a href="#registration" class="smooth-scroll">Registration</a>
+              </li>
+              <li><a href="#downloads" class="smooth-scroll">Downloads</a></li>
             </ul>
           </ul>
         </div>
@@ -133,7 +141,9 @@
           praesentium eligendi natus soluta dignissimos quis saepe! Aspernatur
           consectetur qui eos.
         </p>
-        <a href="link gforms" target="_blank" class="btn-light">Daftar</a>
+        <a href="link gforms" target="_blank" class="btn-light daftar"
+          >Daftar</a
+        >
       </div>
     </section>
 
@@ -158,7 +168,7 @@
         </p>
         <div class="downloads-content">
           <a href="link gforms" target="_blank" class="btn-dark"
-            >Download Kajian</a
+            ><span>Download Kajian</span></a
           >
           <a href="link gforms" target="_blank" class="btn-dark"
             >Download Proposal Sponsor</a
@@ -182,6 +192,7 @@
       </div>
     </footer>
 
+    <script src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
