--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <script src="https://kit.fontawesome.com/26197ec3bf.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>SHN2019</title>
   </head>
 
@@ -141,7 +142,20 @@
           praesentium eligendi natus soluta dignissimos quis saepe! Aspernatur
           consectetur qui eos.
         </p>
-        <a href="error.html" target="_blank" class="btn-light daftar">Daftar</a>
+        <form id="test-form">
+          <div class="text-fields">
+            <h2>Nama :</h2>
+            <input type="text" class="text-input" name="Nama" placeholder="Nama">
+            <h2>Universitas :</h2>
+            <input type="text" class="text-input" name="Universitas" placeholder="Universitas">
+            <h2>Nomor Telepon :</h2>
+            <input type="text" class="text-input" name="NomorTelepon" placeholder="Nomor Telepon (Contoh: +628111111111)">
+          </div>
+          <div class="daftar">
+            <button type="submit" id="submit-form" class="btn-light">Daftar</button>
+          </div>
+        </form>
+        <!-- <a href="error.html" target="_blank" class="btn-light daftar">Daftar</a> -->
       </div>
     </section>
 
@@ -192,5 +206,6 @@
 
     <script src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/form.js"></script>
   </body>
 </html>
